# AudioVisualAI

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
GeminiAudioAI/main/: audio_loop.py  main.py  prompt_manager.py
GeminiAudioAI/outputs/: output_from_ai.txt
